--- a/django_app/templates/include/post.html
+++ b/django_app/templates/include/post.html
@@ -63,7 +63,8 @@
       {% endfor %}
     </div>
     <p class="created">{{ post.created_date }}</p>
-    <form action="">
+    <form action="{% url 'post:comment_create' post_pk=post.pk %}" method="POST">
+        {% csrf_token %}
       <input type="text" placeholder="댓글달기" class="input-comment">
     </form>
   </div>
